--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,109 @@
 :root{
 	--main-font: 'Roboto', sans-serif;
 	--secondary-font: 'Raleway', sans-serif;
-	--action-color: #2196F3;
+	--accent-color: #2196F3;
+	--main-text-color: #212121;
 }
 
 body{
 	font-family: var(--main-font);
 }
+
+.list{
+	list-style-type: none;
+}
+
+.address{
+	font-style: normal;
+}
+
+.link{
+	text-decoration: none;
+	color: var(--main-text-color);
+}
+
+
+/*============HEADER============*/
+
+.logo{
+	font-family: Raleway;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 26px;
+	line-height: 1.19;
+	letter-spacing: 0.03em;
+	color: var(--main-text-color);
+}
+
+.logo__first-part{
+	color: var(--accent-color);
+}
+
+.navigation-list__link{
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: 0.02em;
+}
+
+.current{
+	color: var(--accent-color);
+}
+
+.header-contacts__link{
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 1.14px;
+	letter-spacing: 0.02em;
+}
+
+.navigation-list__link:hover,
+.navigation-list__link:focus,
+.header-contacts__link:hover,
+.header-contacts__link:focus{
+	color: var(--accent-color);
+}
+
+/*============END HEADER============*/
+
+
+/*============HERO============*/
+
+.hero{
+	background-color: #2F303A;
+}
+
+.hero__header{
+	font-weight: 900;
+	font-size: 44px;
+	line-height: 1.36;
+	text-align: center;
+	letter-spacing: 0.06em;
+	text-transform: uppercase;
+	color: #FFFFFF;
+	width: 696px;
+}
+
+.hero__button{
+	background: var(--accent-color);
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.88;
+	width: 200px;
+	height: 50px;
+	border: none;
+	border-radius: 4px;
+	color: #FFFFFF;
+	text-align: center;
+	letter-spacing: 0.06em;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.hero__button:hover,
+.hero__button:focus{
+	background: #188CE8;
+	cursor: pointer;
+}
+
+
+/*============END HERO============*/
