--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,22 @@ body{
 	list-style-type: none;
 }
 
-.address{
+address{
 	font-style: normal;
 }
 
 .link{
 	text-decoration: none;
 	color: var(--main-text-color);
+}
+
+.primary-header{
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 1.17;
+	text-align: center;
+	letter-spacing: 0.03em;
+	color: var(--main-text-color); 
 }
 
 
@@ -109,15 +118,6 @@ body{
 
 /*============PRINCIPLES============*/
 
-.primary-header{
-	font-weight: 700;
-	font-size: 36px;
-	line-height: 1.17;
-	text-align: center;
-	letter-spacing: 0.03em;
-	color: var(--main-text-color); 
-}
-
 .principles__secondary-header{
 	font-weight: 700;
 	font-size: 14px;
@@ -128,10 +128,65 @@ body{
 
 .principles__text{
 	font-size: 14px;
-	line-height: 1.7;
+	line-height: 1.71;
+	letter-spacing: 0.03em;
+	color: #757575;
+}
+
+/*============END PRINCIPLES============*/
+
+/*============TEAM============*/
+
+.team{
+	background: #F5F4FA;
+}
+
+.team-list__item{
+	background: #FFFFFF;
+	width: 270px;
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 0px 0px 4px 4px;
+}
+
+.team-list__header{
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.19;
+	text-align: center;
+	letter-spacing: 0.03em;
+	color: var(--main-text-color);
+}
+
+.team-list__text{
+	font-size: 16px;
+	line-height: 1.19;
+	text-align: center;
 	letter-spacing: 0.03em;
 	color: #757575;
 }
 
 
-/*============END PRINCIPLES============*/
+/*============END TEAM============*/
+
+
+/*============FOOTER============*/
+
+footer{
+	background-color: #2F303A;
+}
+
+.logo-bottom{
+	color: #FFFFFF;
+}
+
+.address-list__link{
+	font-size: 14px;
+	line-height: 1.71;
+	letter-spacing: 0.03em;
+	color: rgba(255, 255, 255, 0.6);
+}
+
+.addr{
+	color: #FFFFFF;
+}
+/*============END FOOTER============*/
