--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@ address{
 	line-height: 1.71;
 	letter-spacing: 0.03em;
 	color: #757575;
+	width: 270px;
 }
 
 /*============END PRINCIPLES============*/
@@ -240,3 +241,6 @@ header::after{
 	display: block;
 	border-bottom: 1px solid #ECECEC;
 }
+
+
+/*============END PORTFOLIO============*/
