fixed line-height at header-contacts links

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ address{
 .header-contacts__link{
 	font-weight: 500;
 	font-size: 14px;
-	line-height: 1.14px;
+	line-height: 1.14;
 	letter-spacing: 0.02em;
 	color: var(--secondary-text-color);
 }
