--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,21 @@
 ;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+p{
+	margin: 0;
+}
+
+ul,
+li{
+	margin: 0;
+	padding: 0;
+}
+
 body{
 	font-family: var(--main-font);
 }
@@ -33,7 +48,21 @@ address{
 	color: var(--main-text-color); 
 }
 
+.wrap{
+	width: 1200px;
+	margin: 0 auto;
+	padding: 0 15px;
+}
+
+.flex-container{
+	display: flex;
+}
+
 /*============HEADER============*/
+
+.header-wrap{
+	padding: 24px 0 25px;
+}
 
 .logo{
 	font-family: Raleway;
@@ -43,10 +72,31 @@ address{
 	line-height: 1.19;
 	letter-spacing: 0.03em;
 	color: var(--main-text-color);
+	margin: 0 93px 0 0;
 }
 
 .logo__first-part{
 	color: var(--accent-color);
+}
+
+.navigation{
+	display: flex;
+	align-items: center;
+}
+
+.navigation-list{
+	display: flex;
+	align-items: center;
+}
+
+.navigation-list__item:not(:last-child){
+	margin: 0 50px 0 0;
+}
+
+.header-contacts{
+	display: flex;
+	align-items: center;
+	margin-left: auto;
 }
 
 .navigation-list__link{
@@ -58,6 +108,10 @@ address{
 
 .current{
 	color: var(--accent-color);
+}
+
+.header-contacts__item:not(:last-child){
+	margin: 0 50px 0 0;
 }
 
 .header-contacts__link{
@@ -93,7 +147,7 @@ address{
 	text-transform: uppercase;
 	color: #FFFFFF;
 	width: 696px;
-	margin: auto;
+	margin-bottom: 30px;
 }
 
 .hero__button{
@@ -109,6 +163,13 @@ address{
 	text-align: center;
 	letter-spacing: 0.06em;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.hero-wrap{
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 600px;
 }
 
 .hero__button:hover,
