--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ li{
 
 img{
 	display: block;
+	width: 100%;
 }
 
 body{
@@ -265,7 +266,6 @@ address{
 .team-list{
 	margin-left: -30px;
 	margin-top: -30px;
-	flex-basis: calc(100% / 4 - 30px);
 	flex-wrap: wrap;
 }
 
@@ -275,6 +275,7 @@ address{
 	border-radius: 0px 0px 4px 4px;
 	margin-left: 30px;
 	margin-top: 30px;
+	flex-basis: calc(100% / 4 - 30px);
 }
 
 .team-list__wrapper{
@@ -381,13 +382,13 @@ footer{
 
 .projects-list{
 	margin-top: -30px;
-	margin-right: -30px;
+	margin-left: -30px;
 	flex-wrap: wrap;
 }
 
 .projects-list__item{
 	margin-top: 30px;
-	margin-right: 30px;
+	margin-left: 30px;
 	flex-basis: calc(100% / 3 - 30px);
 }
 
