--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ address{
 }
 
 .header-contacts__link{
+	display: flex;
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 1.14;
@@ -129,9 +130,9 @@ address{
 	color: var(--secondary-text-color);
 }
 
-
 .header-contacts__icon{
 	fill: currentColor;
+	margin-right: 10px;
 }
 
 .navigation-list__link:hover,
