--- a/css/style.css
+++ b/css/style.css
@@ -327,6 +327,10 @@ address{
 	color: var(--secondary-text-color);
 }
 
+.social-container__icon{
+	fill: currentColor;
+}
+
 
 /*============END TEAM============*/
 
