added clients section

--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,14 @@ address{
 
 /*============END TEAM============*/
 
+/*============CLIENTS============*/
+
+.clients{
+	padding-top: 94px;
+	padding-bottom: 94px;
+}
+
+/*============END CLIENTS============*/
 
 /*============FOOTER============*/
 
