--- a/css/style.css
+++ b/css/style.css
@@ -371,6 +371,8 @@ address{
 
 .clients-list__link{
 	width: 100%;
+	height: 100%;
+	padding: 20px 0;
 	display: flex;
     align-items: center;
     justify-content: center;
@@ -391,7 +393,6 @@ address{
 .clients-list__item{
 	border: 1px solid #AFB1B8;
 	border-radius: 4px;
-	padding: 20px 0;
 	margin-left: 30px;
     flex-basis: calc(100% / 6 - 30px);
 }
@@ -428,6 +429,28 @@ footer{
 
 .addr{
 	color: #FFFFFF;
+}
+
+.footer-container{
+	display: flex;
+	align-items: baseline;
+}
+
+.footer__left-part{
+	margin-right: 70px;
+}
+
+.right-part__header{
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: 0.03em;
+	text-transform: uppercase;
+	color: #FFFFFF;
+}
+
+.footer__social-container{
+	display: flex;
 }
 /*============END FOOTER============*/
 
