--- a/css/style.css
+++ b/css/style.css
@@ -447,6 +447,7 @@ footer{
 	letter-spacing: 0.03em;
 	text-transform: uppercase;
 	color: #FFFFFF;
+	margin-bottom: 20px;
 }
 
 .footer__social-container{
