--- a/css/style.css
+++ b/css/style.css
@@ -456,6 +456,7 @@ footer{
 
 footer ~ .social-container__link{
 	background: rgba(255, 255, 255, 0.1);
+	color: #ffffff;
 }
 /*============END FOOTER============*/
 
