--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,7 @@ footer{
 	display: flex;
 }
 
-footer ~ .social-container__link{
+footer .social-container__link{
 	background: rgba(255, 255, 255, 0.1);
 	color: #ffffff;
 }
