--- a/css/style.css
+++ b/css/style.css
@@ -515,11 +515,14 @@ footer .social-container__link{
 	flex-basis: calc(100% / 3 - 30px);
 }
 
-.projects-list__item:hover{
-	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+.projects-list__link{
+	display: block;
 }
 
-.projects-list__link{
+.projects-list__link:focus,
+.projects-list__link:hover{
+	outline: none;
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .projects__wrapper{
