--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,19 @@ address{
 	display: flex;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /*============HEADER============*/
 
 .header-wrap{
@@ -462,11 +475,6 @@ footer .social-container__link{
 .projects{
 	padding-top: 94px;
 	padding-bottom: 94px;
-}
-
-.projects__header{
-	visibility: hidden;
-	position: absolute;
 }
 
 .filter-list{
